--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/library": "^0.20.0",
     "bootstrap": "^5.3.2",
+    "html-to-image": "^1.11.11",
+    "jsonwebtoken": "^9.0.2",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
