--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,26 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "both": "concurrently \"npm:dev\" \"npm:frontendToBackend\"",
+    "frontendToBackend": "cd ../backend && npm run dev"
   },
   "dependencies": {
     "@zxing/library": "^0.20.0",
     "bootstrap": "^5.3.2",
     "html-to-image": "^1.11.11",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.2.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
