--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@zxing/library": "^0.20.0",
     "bootstrap": "^5.3.2",
+    "datatables.net-bs5": "^2.0.3",
+    "datatables.net-dt": "^2.0.3",
+    "datatables.net-fixedheader-bs5": "^4.0.1",
     "html-to-image": "^1.11.11",
     "jose": "^5.2.0",
     "qrcode": "^1.5.3",
