--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zxing/library": "^0.20.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "datatables.net-bs5": "^2.0.3",
     "datatables.net-dt": "^2.0.3",
     "datatables.net-fixedheader-bs5": "^4.0.1",
@@ -21,7 +22,9 @@
     "jose": "^5.2.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.5"
   },
